tests/golden/errors/int_truthiness.py
n = 5
if n:
    print("unreachable")
